# slidetoleft

./: CMakeLists.txt  README.md  main.cpp
src/: slide.cpp  slide.hpp
tests/: slide_test.cpp
